# rp_project

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: amcl.launch  move_base.launch  navigation.launch
libs/: CMakeLists.txt  lidar.cpp  lidar.h  map.cpp  map.h  robots.cpp  robots.h  visualize.cpp  visualize.h
maps/: cappero.pgm  cappero_map.yaml  map.pgm  map.yaml
param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rviz/: start.rviz  xy_simulator.rviz
src/: main.cpp
